--- a/java-basics/pom.xml
+++ b/java-basics/pom.xml
@@ -23,9 +23,22 @@
             </plugin>
         </plugins>
     </build>
-<!--    <modules>-->
-<!--        <module>design-pattern</module>-->
-<!--    </modules>-->
+    <!--    <modules>-->
+    <!--        <module>design-pattern</module>-->
+    <!--    </modules>-->
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
 
-
+    </dependencies>
 </project>
